force-app/main/default/objects/Scheme__c/fields/Active_Transactions__c.field-meta.xml
<CustomField>
    <fullName>Active_Transactions__c</fullName>
    <label>Active Transactions</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>