force-app/main/default/objects/Scheme__c/fields/Adjustments__c.field-meta.xml
<CustomField>
    <fullName>Adjustments__c</fullName>
    <label>Adjustments</label>
    <type>TextArea</type>
</CustomField>