force-app/main/default/objects/Scheme__c/fields/Approval_Committee__c.field-meta.xml
<CustomField>
    <fullName>Approval_Committee__c</fullName>
    <label>Approval Committee</label>
    <length>80</length>
    <type>Text</type>
</CustomField>