force-app/main/default/objects/Scheme__c/fields/Approved_Duration__c.field-meta.xml
<CustomField>
    <fullName>Approved_Duration__c</fullName>
    <label>Approved Duration</label>
    <length>50</length>
    <type>Text</type>
</CustomField>