force-app/main/default/objects/Scheme__c/fields/Contract_Is_Invalid__c.field-meta.xml
<CustomField>
    <fullName>Contract_Is_Invalid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contract Is Invalid</label>
    <type>Checkbox</type>
</CustomField>