force-app/main/default/objects/Scheme__c/fields/Contract_Signed_On__c.field-meta.xml
<CustomField>
    <fullName>Contract_Signed_On__c</fullName>
    <label>Contract Signed On</label>
    <length>80</length>
    <type>Text</type>
</CustomField>