force-app/main/default/objects/Scheme__c/fields/Current_Award__c.field-meta.xml
<CustomField>
    <fullName>Current_Award__c</fullName>
    <label>Current Award</label>
    <length>80</length>
    <type>Text</type>
</CustomField>