force-app/main/default/objects/Scheme__c/fields/Current_Duration__c.field-meta.xml
<CustomField>
    <fullName>Current_Duration__c</fullName>
    <label>Current Duration</label>
    <length>50</length>
    <type>Text</type>
</CustomField>