force-app/main/default/objects/Scheme__c/fields/Extension__c.field-meta.xml
<CustomField>
    <fullName>Extension__c</fullName>
    <label>Extension</label>
    <length>80</length>
    <type>Text</type>
</CustomField>