force-app/main/default/objects/Scheme__c/fields/Finance_Reference__c.field-meta.xml
<CustomField>
    <fullName>Finance_Reference__c</fullName>
    <label>Finance Reference</label>
    <length>80</length>
    <type>Text</type>
</CustomField>