force-app/main/default/objects/Scheme__c/fields/Original_Award__c.field-meta.xml
<CustomField>
    <fullName>Original_Award__c</fullName>
    <label>Original Award</label>
    <length>80</length>
    <type>Text</type>
</CustomField>