force-app/main/default/objects/Scheme__c/fields/Payment_Schedule_Is_Invalid__c.field-meta.xml
<CustomField>
    <fullName>Payment_Schedule_Is_Invalid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Schedule Is Invalid</label>
    <type>Checkbox</type>
</CustomField>