force-app/main/default/objects/Scheme__c/fields/Payments_Due__c.field-meta.xml
<CustomField>
    <fullName>Payments_Due__c</fullName>
    <label>Payments Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>