force-app/main/default/objects/Scheme__c/fields/Sample_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Sample_End_Date__c</fullName>
    <formula>Start_Date__c + (Duration__c *30)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sample End Date</label>
    <type>Date</type>
</CustomField>