force-app/main/default/objects/Scheme__c/fields/Scheme_Duration__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Duration__c</fullName>
    <label>Scheme Duration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 yr</fullName>
            </value>
            <value>
                <fullName>3 yr</fullName>
            </value>
            <value>
                <fullName>5 yr</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>