force-app/main/default/objects/Scheme__c/fields/Total_Requested_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Requested_Amount__c</fullName>
    <label>Total Requested Amount</label>
    <length>60</length>
    <type>Text</type>
</CustomField>