force-app/main/default/objects/Scheme__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IRMI INORMS Travel Grant Application Form</fullName>
            </value>
            <value>
                <fullName>IRMI RM Fellowship Application Form</fullName>
            </value>
            <value>
                <fullName>IRMI RM Grant Application Form</fullName>
            </value>
            <value>
                <fullName>Clinical Research Centres</fullName>
            </value>
            <value>
                <fullName>Team Science Grants</fullName>
            </value>
            <value>
                <fullName>Clinical and Public Health -Early Career Fellowship Full applications</fullName>
            </value>
            <value>
                <fullName>Clinical and Public Health - Intermediate Fellowship Full applications</fullName>
            </value>
            <value>
                <fullName>Clinical and Public Health -Senior Fellowship Full applications</fullName>
            </value>
            <value>
                <fullName>Early Career Fellowship Full applications</fullName>
            </value>
            <value>
                <fullName>Intermediate Fellowship Full applications</fullName>
            </value>
            <value>
                <fullName>Senior Fellowship Full applications</fullName>
            </value>
            <value>
                <fullName>Prelim forms have only numbers</fullName>
            </value>
            <value>
                <fullName>Programme Award Application Form</fullName>
            </value>
            <value>
                <fullName>Affordable Approaches to Cancer</fullName>
            </value>
            <value>
                <fullName>Clinical/Public Health Research Centers(CRC)</fullName>
            </value>
            <value>
                <fullName>Team Science Grants (TSG)</fullName>
            </value>
            <value>
                <fullName>INROMS Travel Grant</fullName>
                <isActive>false</isActive>
                <label>INROMS Travel Grant</label>
            </value>
            <value>
                <fullName>IRMIRM Fellowships</fullName>
                <isActive>false</isActive>
                <label>IRMIRM Fellowships</label>
            </value>
            <value>
                <fullName>IRMIRM grants</fullName>
                <isActive>false</isActive>
                <label>IRMIRM grants</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>